# biometric-rag-agent

./: .dockerignore  .env.example  .gitignore  .http  Dockerfile  Makefile  README.md  agent_memory.db  agent_memory.db-shm  agent_memory.db-wal  main.py  pyproject.toml  requirements.in  requirements.txt
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_test_run.json
agent/: agent_1.py
cleaned_data/: biostar_2_and_web_security_part0.txt  biostar_2_and_web_security_part1.txt  biostar_2_and_web_security_part2.txt  biostar_2_and_web_security_part3.txt  biostar_2_and_web_security_part4.txt  biostar_2_and_web_security_part5.txt  biostar_2_and_web_security_part6.txt  biostar_2_server_and_device_port_usage_part0.txt  biostar_2_server_and_device_port_usage_part1.txt  biostar_2_server_and_device_port_usage_part2.txt  biostar_2_server_and_device_port_usage_part3.txt  biostar_2_server_and_device_port_usage_part4.txt  connection_modes_in_biostar_2_part0.txt  connection_modes_in_biostar_2_part1.txt  connection_modes_in_biostar_2_part2.txt  documentation-001_part0.txt  documentation-001_part1.txt  documentation-001_part10.txt  documentation-001_part11.txt  documentation-001_part12.txt  documentation-001_part13.txt  documentation-001_part14.txt  documentation-001_part15.txt  documentation-001_part16.txt  documentation-001_part17.txt  documentation-001_part18.txt  documentation-001_part19.txt  documentation-001_part2.txt  documentation-001_part20.txt  documentation-001_part21.txt  documentation-001_part22.txt  documentation-001_part23.txt  documentation-001_part24.txt  documentation-001_part25.txt  documentation-001_part26.txt  documentation-001_part27.txt  documentation-001_part28.txt  documentation-001_part29.txt  documentation-001_part3.txt  documentation-001_part30.txt  (+222 more)
evaluation/: eval.py  evaluation_model.py  (+1 more)
(+53 files in other folders)
