[project]
name = "biometric-rag-agent"
version = "0.1.0"
description = "Biometric Retrieval-Augmented Generation Agent"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "chromadb>=1.0.12",
    "colorlog>=6.9.0",
    "fastapi[standard]>=0.115.9",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-google-genai>=2.1.5",
    "langchain-huggingface>=0.3.0",
    "langgraph>=0.4.8",
    "langgraph-checkpoint-postgres>=2.0.21",
    "langgraph-checkpoint-sqlite>=2.0.10",
    "psycopg>=3.2.9",
    "pydantic>=2.11.5",
    "sentence-transformers>=4.1.0",
    "streamlit>=1.45.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
