[project]
name = "biometric-rag-agent"
version = "0.1.0"
description = "Biometric Retrieval-Augmented Generation Agent"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "chromadb>=1.0.12",
    "colorlog>=6.9.0",
    "datasets>=3.6.0",
    "deepeval>=3.1.7",
    "fastapi[standard]>=0.115.9",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.25",
    "langchain-google-genai>=2.1.5",
    "langchain-huggingface>=0.3.0",
    "langchain-ollama>=0.3.3",
    "langchain-tavily>=0.2.3",
    "langfuse>=3.0.3",
    "langgraph>=0.4.8",
    "langgraph-checkpoint-postgres>=2.0.21",
    "langgraph-checkpoint-sqlite>=2.0.10",
    "llama-index>=0.12.43",
    "llama-parse>=0.6.34",
    "psycopg>=3.2.9",
    "pydantic>=2.11.5",
    "pygraphviz>=1.14",
    "pypdf>=5.6.0",
    "ragas>=0.2.15",
    "ruff>=0.11.13",
    "sentence-transformers>=4.1.0",
    "streamlit>=1.45.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
